web/rightpanel: fix displayname overflow in user info

--- a/web/src/ui/rightpanel/RightPanel.css
+++ b/web/src/ui/rightpanel/RightPanel.css
@@ -68,8 +68,6 @@ div.right-panel-content.widgets {
 }
 
 div.right-panel-content.user {
-	display: flex;
-	flex-direction: column;
 	padding: 1rem;
 
 	div.avatar-container {
@@ -79,7 +77,6 @@ div.right-panel-content.user {
 		justify-content: center;
 		align-items: center;
 		padding: 1rem;
-		flex-shrink: 0;
 		margin: 0 auto;
 
 		> img {
@@ -105,6 +102,7 @@ div.right-panel-content.user {
 		-webkit-line-clamp: 4;
 		-webkit-box-orient: vertical;
 		word-break: break-word;
+		overflow: hidden;
 	}
 
 	div.userid, div.extended-profile, div.devices, div.user-moderation, div.mutual-rooms, div.errors {
